--- a/style.css
+++ b/style.css
@@ -2,7 +2,15 @@
     overflow: scroll;
 }
 
-
+div.counter {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    float: right;
+    background-color: yellow;
+    max-width: 110px;
+    max-height: 20px;
+  }
 
 /* #mytable{
     overflow-y: scroll;
